--- a/윤현서/드림코딩_프로젝트/react/css/package.json
+++ b/윤현서/드림코딩_프로젝트/react/css/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic",
+  "name": "css",
   "version": "0.1.0",
   "private": true,
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
@@ -7,11 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "immer": "^10.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "react-scripts": "5.0.1",
-    "use-immer": "^0.9.0",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,12 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
-    "eslint": "8.x",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.3.0",
-    "prettier": "^3.2.5"
+    "tailwindcss": "^3.4.4"
   }
 }
