--- a/윤현서/드림코딩_라우터/router/package.json
+++ b/윤현서/드림코딩_라우터/router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo",
+  "name": "router",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,6 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  }
 }
